--- a/backend/python/.gitignore
+++ b/backend/python/.gitignore
@@ -9,6 +9,11 @@ __pycache__/
 # Distribution / packaging
 .Python
 env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+.pytest_cache/
 build/
 develop-eggs/
 dist/
@@ -21,20 +26,36 @@ parts/
 sdist/
 var/
 wheels/
-pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
 
 # Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
 .coverage
-.tox
+.coverage.*
+.cache
 nosetests.xml
 coverage.xml
 *.cover
 *.py,cover
 .hypothesis/
+.pytest_cache/
+cover/
 
 # Translations
 *.mo
@@ -56,26 +77,25 @@ instance/
 # Sphinx documentation
 docs/_build/
 
-# PyBuilder
-target/
-
 # Jupyter Notebook
 .ipynb_checkpoints
 
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
+# Pyenv
 .python-version
 
-# pipenv
-Pipfile.lock
+# celery beat schedule file
+celerybeat-schedule
+
+# dotenv
+.env
+.env.*
 
 # virtualenv
 .venv
 venv/
 ENV/
+env.bak/
+venv.bak/
 
 # Spyder project settings
 .spyderproject
@@ -84,6 +104,54 @@ ENV/
 # Rope project settings
 .ropeproject
 
-# Django Poetry
-poetry.lock
-pyproject.toml
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# profiling data
+.prof
+
+# Local history for JetBrains IDEs
+.localhistory
+
+# IDEs and editors
+.idea/
+.vscode/
+*.swp
+*.swo
+*.swn
+*.bak
+*.tmp
+*.temp
+~*
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Windows image file caches
+*.stackdump
+
+# Linux
+*~
+.nfs*
+
+# venv
+venv/
